LPD-64953 test: isolate testBindObjectDefinitionsWithObjectEntries, testBindObjectDefinitionsWithOngoingWorkflowInstances, testUnbindObjectDefinitionsWithOngoingWorkflowInstances and testUnbindObjectDefinitionsWithResourcePermissions